@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

class CalculatorMixin {
    +addition(a: Number, b: Number): Number
    +subtraction(a: Number, b: Number): Number
}

class RandomizerMixin {
    +random(): Number
    +randomRange(min: Number, max: Number): Number
}

class Util {
    +multiplication(a: Number, b: Number): Number
}

CalculatorMixin <|-- Util
RandomizerMixin <|-- Util
@enduml
